tests/config_module_name_mapper_PROJECT_ROOT_1.0/config_module_name_mapper_PROJECT_ROOT_1.0.exp
Error ----------------------------------------------------------------------------------------------------- main.js:4:17

Cannot assign `test` to `b` because number [1] is incompatible with string [2]. [incompatible-type]

   main.js:4:17
   4| var b: string = test; // Error: number ~> string
                      ^^^^

References:
   src/testmodule.js:1:21
   1| export const test = 42;
                          ^^ [1]
   main.js:4:8
   4| var b: string = test; // Error: number ~> string
             ^^^^^^ [2]



Found 1 error
